fix losing on firefox and simplied things

--- a/css/application.css
+++ b/css/application.css
@@ -7,20 +7,7 @@ body {
   position: relative;
   font-family: "museo-sans-rounded",sans-serif;
 }
-.container {
-  position: absolute;
-  top: 46%;
-  min-height: 284px;
-  width:284px;
-  margin-top: -140px;
-  left:50%;
-  margin-left:-140px;
-  background:rgb(39, 209, 122);
-  color:white;
-  border-radius:5px;
-  box-shadow:0px 0px 185px 0px  rgba(14, 84, 59, 0.3);
-  border:2px solid rgb(27, 236, 131)
-}
+
 
 
 header{
@@ -40,9 +27,9 @@ hr{ width:92%;
     border:0px;
   }
 
-  .wf-loading .main,.wf-loading h1 {
+  /*.wf-loading .main,.wf-loading h1 {
       visibility: hidden;
-    }
+    }*/
 
 
 .main{
@@ -67,72 +54,40 @@ a{
   background:rgba(255, 255, 255,0.2)
 }
 
-.mailchimp-signup-form form{
-  text-align:center;
-  padding-top:15px;
-  margin-bottom:-2px;
-}
-
-.mailchimp-signup-form form input{
-  border:0px;
-  border-radius:100px;
-  padding:5px 10px;
-  font-size:14px;
-  max-width:160px;
-}
-
-.mailchimp-signup-form form input[type="submit"]{
-  padding:6px 9px;
-  background:rgb(25, 191, 141);
-  color:white;
-  margin-left:3px;
-  cursor:pointer;
-}
-
-.mailchimp-signup-form form input[type="submit"]:hover{
-  background:rgb(21, 201, 148);
-}
-
-
 
 
 /*big white*/
 
-.big-white-container{
-  position: absolute;
-  top: 46%;
+.container{
   height: 500px;
   width: 500px;
-  margin-top: -240px;
-  left: 50%;
-  margin-left: -250px;
-  background: white;
+  margin:160px auto;
   color: rgb(56, 56, 56);
   border-radius: 5px;
 }
 
-.big-white-container a{
+.container a{
   color:rgb(22, 184, 223);
 }
 
-.big-white-container .social a {
+.container .social a {
   color:rgb(154, 154, 154);
 }
 
-.big-white-container .social a:hover{
+.container .social a:hover{
   background:rgba(232, 232, 232, 0.7)
 }
 
-.big-white-container h1{
+.container h1{
   font-size:25px;
 }
 
 
-.big-white-container .main{
+.container .main{
   font-size:18px;
 }
 
-.big-white-container .mailchimp-signup-form form input{
+.container .mailchimp-signup-form form input{
   border:1px solid rgb(221, 221, 221);
   width:280px;
   max-width:90%;
@@ -141,31 +96,21 @@ a{
   margin-bottom:10px;
 }
 
-.big-white-container .mailchimp-signup-form form input[type="submit"]{
+.container .mailchimp-signup-form form input[type="submit"]{
   border: 1px solid rgb(25, 191, 141);
   width:150px;
   padding:8px 9px;
 }
 
-#clockdiv{
-  text-align:center;
-  padding:26px 0px 0px;
-  font-size:15px;
-  color:rgb(136, 136, 136);
-}
-
 @media (max-width: 520px) {
-  .big-white-container {
-    width:98%;
-    margin-left:0px;
-    left:1%;
-    height: 500px;
+  .container{
+    margin:80px auto;
+    width:100%;
   }
 }
 
-@media (max-height: 520px) {
-  .big-white-container {
-    top: 0%;
-    margin-top: 30px;
+@media (max-height: 480px) {
+  .container{
+    margin:50px auto;
   }
 }
